--- a/config/settings.json
+++ b/config/settings.json
@@ -1,5 +1,5 @@
 {
-    "alias": "bestmerch.printbar.ru",
+    "alias": "your_printbar_shop_url",
     "pin_creating_period": 25,
     "board_creating_period": 500
 }
